syntax = "proto3";

package akidb.embedding.v1;

// Embedding Service
// Provides text-to-vector embedding generation using MLX models
service EmbeddingService {
  // Generate embeddings for a batch of texts
  rpc Embed(EmbedRequest) returns (EmbedResponse);

  // Get model information
  rpc GetModelInfo(GetModelInfoRequest) returns (GetModelInfoResponse);
}

message EmbedRequest {
  // List of texts to embed (max 32 per request)
  repeated string texts = 1;

  // Model name (optional, default: "qwen3-0.6b-4bit")
  optional string model = 2;

  // Pooling strategy (optional, default: "mean")
  optional string pooling = 3;

  // L2 normalization (optional, default: true)
  optional bool normalize = 4;
}

message EmbedResponse {
  // Generated embeddings (one per input text)
  repeated Embedding embeddings = 1;

  // Model name used
  string model = 2;

  // Embedding dimension
  uint32 dimension = 3;

  // Usage statistics
  UsageInfo usage = 4;
}

message Embedding {
  // Dense vector representation
  repeated float values = 1 [packed=true];
}

message UsageInfo {
  // Total tokens processed
  uint64 total_tokens = 1;

  // Duration in milliseconds
  uint64 duration_ms = 2;
}

message GetModelInfoRequest {
  // Empty for now (future: model selection)
}

message GetModelInfoResponse {
  // Model identifier
  string model = 1;

  // Output dimension
  uint32 dimension = 2;

  // Maximum tokens supported
  uint64 max_tokens = 3;
}
